# F1.OpenF1.DatasetBuilder

./: F1.OpenF1.DatasetBuilder.slnx  README.md
F1.OpenF1.DatasetBuilder/: .dockerignore  .env  .env.example  Dockerfile  F1.OpenF1.DatasetBuilder.py  F1.OpenF1.DatasetBuilder.pyproj  README.md  docker-compose.yml  pyproject.toml
F1.OpenF1.DatasetBuilder/Doc/: documentacao_sistema.md  especificacao_tecnica.md
F1.OpenF1.DatasetBuilder/artifacts_exports/lap_time_ranking_20260313_214834/: features.json  metrics.json  ranking_summary.csv
F1.OpenF1.DatasetBuilder/artifacts_exports/lap_time_regression_20260313_214833/: metrics.json  predictions_sample.csv
F1.OpenF1.DatasetBuilder/artifacts_exports/relative_position_20260313_214632/: features.json  metrics.json  ranking_predictions.csv  split_summary.json
F1.OpenF1.DatasetBuilder/artifacts_exports/tyre_degradation_20260313_214853/: features.json  metrics.json  predictions_sample.csv  split_summary.json
F1.OpenF1.DatasetBuilder/config/: config.yaml  config_2024.yaml
F1.OpenF1.DatasetBuilder/config/requests/: request_2023_1141_race.yaml  request_2023_1142_race.yaml  request_2023_1143_race.yaml  request_2023_1207_race.yaml  request_2023_1208_race.yaml  request_2023_1209_race.yaml  request_2023_1210_race.yaml  request_2023_1211_race.yaml  request_2023_1212_race.yaml  request_2023_1213_race.yaml  request_2023_1214_race.yaml  request_2023_1215_race.yaml  request_2023_1216_race.yaml  request_2023_1217_race.yaml  request_2023_1218_race.yaml  request_2023_1219_race.yaml  request_2023_1220_race.yaml  request_2023_1221_race.yaml  (+79 more)
(+10377 files in other folders)
